# ada

./: .gitignore  .npmrc  NOTICE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  架构设计图
.ada-agent/: deps-install-state.json
.joycode/: mcp.json
apps/ada-gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/ada-gui/src-tauri/capabilities/: default.json
apps/ada-gui/src-tauri/src/: lib.rs  main.rs
canvases/: ada-architecture-blueprint.canvas.tsx
config/: app-profiles.example.json  default.yaml  mcp.cursor.example.json  playwright-ada-map.json
docs/: ADA-GUI-操作手册.md  ADA-MCP-接入手册.md  ADA-MCP-环境变量.md  ADA-开发手册.md  ADA-整体架构设计-确认稿.md  ADA-架构设计方案.md  ADA-语义命令对照.md  ADA-部署手册.md  DEPRECATED-APIS.md  Playwright-ADA-兼容映射.md  README.md
scripts/: README.md  ada_mcp_jd_verify.py  bootstrap-native-mock.mjs  build-executable.mjs  build-mcp-npm.mjs  check-mcp-publish-versions.mjs  close-web-sessions.ts  e2e-smoke.mjs  generate-bundled-config.mjs  harmony-launch-jd-local.mjs  jsconfig.json  mcp-app-verify.mjs  mcp-browser-ops-verify.mjs  mcp-browser-verify.mjs  mcp-bundled-smoke.mjs  mcp-jd-app-verify.mjs  mcp-jd-food-test.mjs  mcp-smoke.mjs  mcp-transport.mjs  mcp-web-appium-perf.mjs  mcp_jd_app_verify.py  mcp_jd_firefox_selenium_verify.py  mcp_jd_firefox_verify.py  rebundle-core.mjs  requirements-mcp-verify.txt  restore-workspace-src-main.mjs  run-erp-jd-chrome-tasks.mjs  setup-tauri-env.ps1  sync-download-probe-vendor.mjs  test-hidden-spawn.mjs  脚本清单.md
tasks/: android-invoke-mock.tasks.json  android-invoke-real.tasks.json  (+19 more)
(+291 files in other folders)
