[package]
name = "ada-gui"
version = "0.1.0"
description = "ADA native GUI powered by Tauri"
authors = ["ADA Team"]
edition = "2021"

[lib]
name = "ada_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1"
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
